--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,12 +1,12 @@
-@import "~bootstrap/scss/bootstrap";
-@import "~@fortawesome/fontawesome-free/css/all.min.css";
+@import '~bootstrap/scss/bootstrap';
+@import '~@fortawesome/fontawesome-free/css/all.min.css';
 
 body {
   background-color: black;
 }
 
 .navbar-dark .navbar-brand {
-  font-family: "Oregano", cursive !important;
+  font-family: 'Oregano', cursive !important;
   color: red;
   font-weight: 900;
   font-size: 2em;
@@ -95,4 +95,29 @@ body {
   .description {
     white-space: pre-wrap;
   }
+}
+.fav-star {
+  display: flex;
+  justify-content: flex-end;
+  color: goldenrod;
+}
+.card-body {
+  display: flex;
+  flex-direction: column;
+}
+
+.book-icons {
+  margin-top: auto;
+}
+i > span {
+  pointer-events: none;
+}
+
+.view-author-books-container {
+  display: flex;
+  flex-direction: column;
+}
+.author-books-cards {
+  display: flex;
+  flex-wrap: wrap;
 }
