Caught up with the classroom.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -113,6 +113,10 @@ i > span {
   pointer-events: none;
 }
 
+i {
+  pointer-events: none;
+}
+
 .view-author-books-container {
   display: flex;
   flex-direction: column;
